css/common.css
@font-face {
  font-family: 'FilsonSoftW03';
  src: url('fonts/FilsonSoftW03-Regular.eot');
  src: url('fonts/FilsonSoftW03-Regular.eot?#iefix') format('embedded-opentype'),
  url('fonts/FilsonSoftW03-Regular.woff2') format('woff2'),
  url('fonts/FilsonSoftW03-Regular.woff') format('woff'),
  url('fonts/FilsonSoftW03-Regular.svg#FilsonSoftW03-Regular') format('svg');
  font-weight: normal;
  font-style: normal;
}

* {
  box-sizing: border-box;
  font-size: 16px;
  letter-spacing: 0.004em;
  margin: 0;
  font-family: 'FilsonSoftW03', sans-serif;
  outline: none;
}

:root {
  --oxitec-dark: #2E5072;
  --oxitec-dark-hover: #405E87;
  --oxitec-dark-focus: #314968;
  --oxitec-disabled: #9AA7B8;
  --oxitec-disabled-light: rgba(54, 80, 114, 0.5);
  --oxitec-primary: #365072;
  --oxitec-white: #ffffff;
  --oxitec-error: #E72626;
  --oxitec-border: #D5D8E0;

}

body,
html,
.panel {
  min-height: 100vh;
}

body {
  margin: 0;
  position: relative;
}

.container {
  height: 100%;
}

.text-center {
  text-align: center;
}

ul {
  padding: 0
}

ul li {
  list-style: none;
}

p {
  margin: 0
}

a {
  text-decoration: underline;
  font-size: 14px;
  color: var(--oxitec-dark);
  padding: 5px 0;
}

a:focus {
  outline: 0
}

input, select {
  height: 48px;
  width: 100%;
  border-radius: 8px;
  border: 1px solid var(--oxitec-border);
  padding: 0 15px;
  font-size: 16px;
  line-height: 21px;
  color: var(--oxitec-primary);
  background-color: transparent;
  outline: none;
  box-shadow: none!important;
  caret-color: var(--oxitec-primary);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

select {
  position: relative;
  background-repeat: no-repeat;
  background-position-x: 95%;
  background-position-y: 50%;
  padding-right: 35px;
  background-image: url(https://helendobosh.github.io/oxitec-signin/images/chevron.png);
  background-size: 11px;
}

select:focus, select:hover {
  background-image: url(https://helendobosh.github.io/oxitec-signin/images/chevron-focused.png);
}

input::placeholder,
select::placeholder {
  font-weight: normal;
  overflow: visible;
  color: var(--oxitec-disabled-light);
}

input:focus,
select:focus,
button:focus,
input:focus-visible,
select:focus-visible,
button:focus-visible {
  outline: none;
}

input:hover,
select:hover {
  border: 1px solid var(--oxitec-primary);
}

input:focus,
select:focus {
  border-radius: 8px;
  border: 2px solid var(--oxitec-primary);
}

input:disabled,
select:disabled {
  cursor: not-allowed;
  color: var(--oxitec-disabled-light);
  -webkit-text-fill-color: var(--oxitec-disabled-light);
  opacity: 1;
}

input:disabled:hover,
select:disabled:hover,
input:disabled:focus,
select:disabled:focus {
  border: 1px solid var(--oxitec-border);
}

.error {
  color: var(--oxitec-error);
  font-size: 14px;
}

.error p {
  font-size: 12px;
}

.error.itemLevel {
  color: var(--oxitec-error);
  font-size: 12px;
  margin-bottom: 7px;
}

input.highlightError  {
  border: 1px solid var(--oxitec-error)
}

button {
  cursor: pointer;
  outline: none;
  box-shadow: none;
}

.buttons button {
  height: 48px;
  width: 100%;
  left: 0;
  top: 186px;
  border-radius: 6px;
  background-color: var(--oxitec-primary);
  color: var(--oxitec-white);
  border: none;
  margin-top: 24px;
}

.buttons button[form="attributeVerification"] {
  margin-top: 16px;
}

.buttons button:hover {
  background-color: var(--oxitec-dark-hover);
}

.buttons button:focus {
  background-color: var(--oxitec-dark-focus);
}

.buttons button[aria-disabled=true] {
  background-color: var(--oxitec-disabled);
  cursor: not-allowed;
}

.buttons button:not([aria-disabled=true]) {
  opacity: 1
}

.buttons #cancel, .buttons #email_ver_but_resend,
.buttons #email_ver_but_edit {
  font-size: 14px;
  line-height: 18px;
  padding: 0;
  background: transparent;
  width: auto;
  height: auto;
  margin: 0;
  border: none;
  color: var(--oxitec-primary);
}

#email_ver_input {
  margin-bottom: 30px;
}

.buttons #email_ver_but_resend {
  text-decoration: underline;
  position: absolute;
  top: 60px;
}

.buttons #email_ver_but_edit {
  text-decoration: underline;
  margin: 12px 0;
}

#simplemodal-container .simplemodal-data, .verifying_blurb {
  display: none!important;
}

.buttons.verify {
  position: relative;
}

.buttons #cancel {
  position: absolute;
  top: 43px;
  left: 30px;
}

.buttons #cancel:before {
  border-style: solid;
  border-width: 0.15em 0.15em 0 0;
  content: '';
  display: inline-block;
  height: 0.5em;
  width: 0.5em;
  transform: rotate(-135deg);
  margin-right: 5px;
}

.bg-image-wrapper {
  display: none;
}

.bg-image-wrapper-mobile {
  display: block;
}

.bg-image {
  top: 0;
  left: 0;
  pointer-events: none;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.logo {
  height: 39px;
  width: 88px;
  display: block;
  margin: 0 auto;
}

.container .panel-default {
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 15px 0;
}

.container .panel-default .panel-body {
  width: 90%;
  margin: 0 auto;
  box-shadow: 0 50px 75px rgba(201, 201, 211, 0.25);
  border-radius: 24px;
  background-color: white;
  padding: 32px 23px;
  position: relative;
  max-width: 452px;
}

.panel-default .panel-body .attrEntry {
  position: relative;
  margin-top: 24px;
}

.panel-default .panel-body .TextBox .attrEntry> div:first-child {
  margin-bottom: 24px;
}

.panel-default .panel-body .verificationInfoText {
  font-size: 14px;
  line-height: 18px;
  color: var(--oxitec-dark);
}

.panel-default .panel-body .verificationSuccessText {
  font-size: 14px;
  line-height: 18px;
  color: var(--oxitec-dark);
}

#attributeList ul li .attrEntry.validate input.invalid,
#attributeList ul li .attrEntry.validate input:invalid {
  border: 1px solid var(--oxitec-error)
}

.panel-default .entry .entry-item.invalid label,
.panel-default .attrEntry.invalid label {
  color: var(--oxitec-error);
}

#attributeList ul li .helpLink {
  display: none
}

.panel-default .entry .entry-item.disabled label,
.panel-default .attrEntry.disabled label {
  color: var(--oxitec-disabled-light);
  cursor: not-allowed;
}

.panel-default .entry .entry-item label,
.panel-default .attrEntry label {
  opacity: 0;
  color: var(--oxitec-primary);
  background-color: #fff;
  font-size: 12px;
  line-height: 3px;
  padding: 0 4px;
  transition: all 0.3s linear;
}

.panel-default .DropdownSingleSelect .attrEntry label {
  opacity: 1;
  z-index: 1;
  top: 0;
}

.panel-default .entry .entry-item.filled > label,
.panel-default .attrEntry.filled > label{
  opacity: 1;
}

@media only screen and (min-width: 768px) {
  .container .panel-default .panel-body {
    padding: 40px 56px;
  }

  .buttons button {
    height: 56px;
  }

  .buttons #cancel {
    top: 46px;
    left: 60px;
  }

  input, select {
    height: 56px;
  }

  a {
    padding: 0;
  }

  .bg-image-wrapper {
    display: block;
  }

  .bg-image-wrapper-mobile {
    display: none;
  }

  .buttons #email_ver_but_resend {
    top: 67px;
  }
}

